# safetext

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  context7.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  daily-test.yml  publish-pypi.yml
safetext/: __init__.py  utils.py
safetext/languages/ar/: words.txt
safetext/languages/az/: words.txt
safetext/languages/de/: words.txt
safetext/languages/en/: words.txt
safetext/languages/fa/: words.txt
safetext/languages/fr/: words.txt
safetext/languages/hi/: words.txt
safetext/languages/ja/: words.txt
safetext/languages/ko/: words.txt
safetext/languages/ru/: words.txt
safetext/languages/tr/: words.txt
safetext/languages/zh/: words.txt
scripts/: README.md  run_tests.bat  run_tests.sh  setup.bat  setup.sh
tests/: README.md  conftest.py  test_advanced.py  test_basic.py  test_custom_words.py
